@@ -15,47 +15,46 @@
 */
 package grails.plugin.searchable.internal.compass.search;
 
-import org.apache.commons.collections.MapUtils;
-import org.compass.core.CompassHits;
-
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import org.apache.commons.collections.MapUtils;
+import org.compass.core.CompassHits;
+
 /**
  * Returns a "paged" search result object for the given hits
  *
  * NOT thread-safe
- * 
+ *
  * @author Maurice Nicholson  PCR edit
- * 
+ *
  * added the collected compasshits
  */
 public class SearchableSubsetSearchResultFactory implements SearchableSearchResultFactory {
 
-	/*
-	 * collectedHits are NOT objects of type compassHits, they are the businessobjects that are returned from compassHit.getValue()
-	 * The collectedCompassHits are the the compassHit equivalent of the collectedHits
-	 */
+    /*
+     * collectedHits are NOT objects of type compassHits, they are the businessobjects that are returned from compassHit.getValue()
+     * The collectedCompassHits are the the compassHit equivalent of the collectedHits
+     */
     public Object buildSearchResult(final CompassHits hits, final Object collectedHits,final Object collectedCompassHits, Map options) {
         final int offset = MapUtils.getIntValue(options, "offset");
         final int max = MapUtils.getIntValue(options, "max");
         final List scores = new ArrayList(max);
         for (int i = offset; i < Math.min(offset + max, hits.length()); i++) {
-            scores.add(i - offset, new Float(hits.score(i))); // "new Float" instead of "Float.valueOf" for 1.4 compatibility
+            scores.add(i - offset, Float.valueOf(hits.score(i)));
         }
-        return new HashMap() {{
-            put("offset", new Integer(offset));
-            put("max", new Integer(max));
-            put("results", collectedHits);
-            
-            put("scores", scores);
-            put("total", new Integer(hits.length()));
-            //need to return the compass hits also!
-            put("hits", collectedCompassHits);
-            
-            
-        }};
+
+        Map map = new HashMap();
+        map.put("offset", offset);
+        map.put("max", max);
+        map.put("results", collectedHits);
+
+        map.put("scores", scores);
+        map.put("total", hits.length());
+        //need to return the compass hits also!
+        map.put("hits", collectedCompassHits);
+        return map;
     }
 }
